--- a/todoapp/templates/login.html
+++ b/todoapp/templates/login.html
@@ -1,4 +1,5 @@
 {% include 'header.html' %}
+<h1 style="text-align: center;">LOG-IN Form</h1>
      <div class="container">
         <form>
             <div class="mb-3">
@@ -11,6 +12,8 @@
               <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <p class="text-center text-muted mt-5 mb-0">I don't have an account.<a href="{% url 'register' %}"
+                class="fw-bold text-body"><u>Register Here.</u></a></p>
           </form>
     </div>
     {% include 'footer.html' %}
