--- a/todoapp/templates/register.html
+++ b/todoapp/templates/register.html
@@ -11,7 +11,7 @@
                   <h2 class="text-uppercase text-center mb-5">Create an account</h2>
     
                   <form method="post">
-    
+                    {% csrf_token %}
                     <div data-mdb-input-init class="form-outline mb-4">
                       <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="fir_name"/>
                       <label class="form-label" for="form3Example1cg">Your First Name</label>
@@ -19,6 +19,10 @@
                     <div data-mdb-input-init class="form-outline mb-4">
                         <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="last_name"/>
                         <label class="form-label" for="form3Example1cg">Your Last Name</label>
+                      </div>
+                      <div data-mdb-input-init class="form-outline mb-4">
+                        <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="usernmae"/>
+                        <label class="form-label" for="form3Example1cg">Username</label>
                       </div>
                     <div data-mdb-input-init class="form-outline mb-4">
                       <input type="email" id="form3Example3cg" class="form-control form-control-lg" name="email"/>
@@ -36,7 +40,7 @@
                     </div>
     
                     <div class="d-flex justify-content-center">
-                      <button  type="button" data-mdb-button-init
+                      <button  type="submit" data-mdb-button-init
                         data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                     </div>
     
