--- a/todoapp/templates/register.html
+++ b/todoapp/templates/register.html
@@ -21,7 +21,7 @@
                         <label class="form-label" for="form3Example1cg">Your Last Name</label>
                       </div>
                       <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="usernmae"/>
+                        <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="username"/>
                         <label class="form-label" for="form3Example1cg">Username</label>
                       </div>
                     <div data-mdb-input-init class="form-outline mb-4">
