--- a/todoapp/templates/login.html
+++ b/todoapp/templates/login.html
@@ -1,15 +1,16 @@
 {% include 'header.html' %}
 <h1 style="text-align: center;">LOG-IN Form</h1>
      <div class="container">
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <label for="exampleInputEmail1" class="form-label">Username</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="username">
+              <div id="emailHelp" class="form-text">We'll never share your usernmae with anyone else.</div>
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="password" class="form-control" id="exampleInputPassword1"name='password'>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
             <p class="text-center text-muted mt-5 mb-0">I don't have an account.<a href="{% url 'register' %}"
