--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -8,10 +8,11 @@
   
               <h4 class="text-center my-3 pb-3">To Do App</h4>
   
-              <form class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2">
+              <form class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2" method='post'>
+                {% csrf_token %}
                 <div class="col-12">
                   <div data-mdb-input-init class="form-outline">
-                    <input type="text" id="form1" class="form-control" placeholder="Enter the task here..." />
+                    <input type="text" id="form1" class="form-control" placeholder="Enter the task here..." name="todo_list"/>
                   </div>
                 </div>
   
@@ -19,9 +20,6 @@
                   <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary">Save</button>
                 </div>
   
-                <div class="col-12">
-                  <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-warning">Get tasks</button>
-                </div>
               </form>
   
               <table class="table mb-4">
@@ -33,10 +31,11 @@
                     <th scope="col">Actions</th>
                   </tr>
                 </thead>
+                {% for i in data %}
                 <tbody>
                   <tr>
-                    <th scope="row">1</th>
-                    <td>Buy groceries for next week</td>
+                    <th scope="row">{{ forloop.counter }}</th>
+                    <td>{{ i.task }}</td>
                     <td>In progress</td>
                     <td>
                       <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-danger">Delete</button>
@@ -44,6 +43,7 @@
                     </td>
                   </tr>
                 </tbody>
+                {% endfor %}
               </table>
   
             </div>
