updating the model

--- a/todoapp/templates/index.html
+++ b/todoapp/templates/index.html
@@ -45,7 +45,9 @@
                 </tbody>
                 {% endfor %}
               </table>
-  
+              <div class="col-12" style="text-align: center;">
+                <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary">Logout</button>
+              </div>
             </div>
           </div>
         </div>
